# hermes-desktop

./: .gitignore  IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  settings-prototype.html  tailwind.config.js  test-shell.js  vite.config.ts
docs/plans/: 2026-04-13-chat-first-frontend-optimization-plan.md  2026-04-13-desktop-shell-polish-and-runtime-hardening.md  2026-04-14-desktop-page-requirements-reset.md  2026-04-14-settings-page-reset-requirements.md
src/: App.tsx
src-tauri/: Cargo.toml  generate_icons.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: hermes.ts
src/components/: ChatInspector.tsx  Layout.tsx  ThemeToggle.tsx
src/components/chat/: MessageRenderer.tsx
src/hooks/: useHermesRuntime.ts
src/lib/: hermes-helpers.ts
src/pages/: Channels.tsx  Chat.tsx  InstallWizard.tsx  Settings.tsx  Skills.tsx  Tasks.tsx
src/styles/: global.css
src/types/: index.ts
ui/: hermes-desktop.html
