[package]
name = "hermes-desktop"
version = "0.1.0"
description = "Hermes Agent Desktop Client"
authors = ["Hermes Team"]
license = ""
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0-beta"
